# datafusion-bigtable

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
python/: Cargo.toml  Makefile  Pipfile  pyproject.toml
python/datafusion_bigtable/: __init__.py
python/datafusion_bigtable/tests/: test_sql.py
python/src/: datasource.rs  lib.rs
script/: create_table.sh  insert_rows.py  seed.sh
src/: datasource.rs  execute_plan.rs  lib.rs
src/datasource/: composer.rs
