[package]
name = "datafusion-bigtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "7.0.0"
arrow = { version = "9.0.0", features = ["prettyprint"] }
async-trait = "0.1.41"
bigtable_rs = "0.1.5"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "parking_lot"] }
