[package]
name = "datafusion-bigtable"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "README.md",
    "Cargo.toml",
]
license = "Apache-2.0"
description = "Bigtable data source for Apache Arrow Datafusion"
homepage = "https://github.com/datafusion-contrib/datafusion-bigtable"
repository = "https://github.com/datafusion-contrib/datafusion-bigtable"
readme = "README.md"
keywords = [ "arrow", "query", "sql", "datafusion", "bigtable" ]

[dependencies]
datafusion = "7.0.0"
arrow = { version = "9.0.0", features = ["prettyprint"] }
async-trait = "0.1.41"
bigtable_rs = "0.1.5"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "parking_lot"] }
byteorder = "0.5.1"
